[FSCAR-36] fixed issue with transaction search